# purchases-service

./: .env.example  .gitignore  Dockerfile  Dockerfile.grpc-mock  README.md  docker-compose.yml  pyproject.toml
grpc_mock/: __init__.py  server.py
src/: __init__.py  config.py  main.py
src/api/: dependencies.py
src/api/routes/: __init__.py  health.py
src/grpc_client/: __init__.py  client.py
src/grpc_client/proto/: ambassador.proto
src/models/: __init__.py
src/schemas/: __init__.py
src/tasks/: __init__.py
